dont use use. Yet.

--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
@@ -1,5 +1,5 @@
-@use '../60-utilities/layout';
-@use '../60-utilities/typography';
+@import '../60-utilities/layout';
+@import '../60-utilities/typography';
 
 .c-user-details {
 	align-self: center;
