Use utility styles from brand context

--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -1,4 +1,6 @@
 @import '@springernature/brand-context/default/scss/30-mixins/arrow/scss';
+@import '@springernature/brand-context/default/scss/60-utilities/layout';
+@import '@springernature/brand-context/default/scss/60-utilities/positioning';
 @import '../10-settings/colours';
 
 .c-user-details {
