--- a/toolkits/global/packages/global-loader-animation/scss/50-components/_loader.scss
+++ b/toolkits/global/packages/global-loader-animation/scss/50-components/_loader.scss
@@ -62,7 +62,7 @@
 		}
 
 		&:nth-child(2) {
-			border-color: $secondaey-color;
+			border-color: $secondary-color;
 			-webkit-animation-delay: -0.95s;
 			animation-delay: -0.95s;
 		}
