remove utility classes

--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -5,6 +5,12 @@
 		&__open {
 			@include arrow($darker-grey, down, 4px);
 
+			margin-left: 10px;
+			right: 0;
+			color: $link-color;
+			text-decoration: none;
+			vertical-align: baseline;
+
 			&.open {
 				@include arrow($darker-grey, up, 4px);
 			}
