--- a/toolkits/springernature/packages/springernature-user-details/view/user-details.hbs
+++ b/toolkits/springernature/packages/springernature-user-details/view/user-details.hbs
@@ -1,14 +1,14 @@
 <section class="c-user-details">
-    <button data-component-user-details-open class="c-user-details__open link-like u-ml10 u-position-right" data-expander data-expander-target="#user">
+    <button data-component-user-details-open class="c-user-details__open" data-expander data-expander-target="#user">
         <span data-component-user-first-name>{{first_name}}</span>
-        <span class="u-pr10" data-component-user-last-name>{{last_name}}</span>
+        <span class="c-user-details__last-name" data-component-user-last-name>{{last_name}}</span>
     </button>
     <div id="user" class="c-user-details__content" data-component-user-details>
-        <span class="c-user-details__content-item u-font-12 u-color-darker-grey">Signed in as</span>
-        <div class="c-user-details__content-item c-user-details__email u-mb10 u-font-12" data-component-user-email>{{email_address}}</div>
+        <span class="c-user-details__content-item">Signed in as</span>
+        <div class="c-user-details__content-item c-user-details__email" data-component-user-email>{{email_address}}</div>
         <ul class="c-user-details__links">
-            <li class="c-user-details__link u-cursor-pointer">
-                <a class="c-user__logout u-display-block u-font-12" href="{{logoutUri}}" data-component-logout>Log out</a>
+            <li class="c-user-details__link">
+                <a class="c-user__logout" href="{{logoutUri}}" data-component-logout>Log out</a>
             </li>
         </ul>
     </div>
