--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
@@ -9,16 +9,33 @@
 		right: 0;
 	}
 
+	&__link {
+		cursor: pointer;
+	}
+
 	&__links {
 		list-style-type: none;
 		margin: 0;
 		padding: 5px 0 0 0;
 		border-top: 1px solid #e7eff4;
+		color: #666;
+	}
+
+	&__email {
+		margin-bottom: 10px;
+		color: #222;
+	}
+
+	&__last-name {
+		padding-right: 10px;
 	}
 
 	&__logout {
 		&:hover {
 			color: #fff;
 		}
+
+		display: block;
+		font-size: $small-font-size;
 	}
 }
