move a couple of style to core, add class

--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
@@ -9,6 +9,13 @@
 		right: 0;
 	}
 
+	&__open {
+		text-decoration: none;
+		vertical-align: baseline;
+		background: none;
+		border: 0;
+	}
+
 	&__link {
 		cursor: pointer;
 	}
