Indicate in the readme that the arrow mixin scss is required

--- a/toolkits/springernature/packages/springernature-user-details/view/user-details.hbs
+++ b/toolkits/springernature/packages/springernature-user-details/view/user-details.hbs
@@ -1,5 +1,5 @@
 <section class="c-user-details">
-    <button data-component-user-details-open class="c-user-details__open position-right" data-expander data-expander-target="#user">
+    <button data-component-user-details-open class="c-user-details__open" data-expander data-expander-target="#user">
         <span data-component-user-first-name>{{first_name}}</span>
         <span class="c-user-details__last-name" data-component-user-last-name>{{last_name}}</span>
     </button>
