--- a/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
@@ -21,7 +21,7 @@
 
 	.site-title {
 		color: #1a2d59;
-		font-family: $fontMerriweather;
+		font-family: $font-family-serif;
 		font-size: 18px;
 		font-weight: 700;
 	}
