--- a/toolkits/springernature/packages/springernature-header/view/header.hbs
+++ b/toolkits/springernature/packages/springernature-header/view/header.hbs
@@ -14,23 +14,8 @@
                 </a>
             </div>
 
-            {{#userDetails}}
-                <section class="c-user-details">
-                    <button data-component-user-details-open class="c-user-details__open" data-expander data-expander-target="#user">
-                        <span data-component-user-first-name>{{first_name}}</span>
-                        <span class="c-user-details__last-name" data-component-user-last-name>{{last_name}}</span>
-                    </button>
-                    <div id="user" class="c-user-details__content" data-component-user-details>
-                        <span class="c-user-details__content-item">Signed in as</span>
-                        <div class="c-user-details__content-item c-user-details__email" data-component-user-email>{{email_address}}</div>
-                        <ul class="c-user-details__links">
-                            <li class="c-user-details__link">
-                                <a class="c-user__logout" href="{{logoutUri}}" data-component-logout>Log out</a>
-                            </li>
-                        </ul>
-                    </div>
-                </section>
-            {{/userDetails}}
+            {{!-- If you are using the user-details component, insert here --}}
+
         </div>
     </div>
 </header>
