remove utility classes

--- a/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-header/scss/50-components/enhanced.scss
@@ -19,3 +19,13 @@
 		max-width: 209px;
 	}
 }
+
+.c-header__content-block {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.c-header__logo-link {
+	display: flex;
+	flex-wrap: wrap;
+}
