--- a/toolkits/springernature/packages/springernature-header/view/header.hbs
+++ b/toolkits/springernature/packages/springernature-header/view/header.hbs
@@ -1,21 +1,19 @@
 <header class="c-header">
     <div class="c-header__inner">
         <div class="c-header__content">
-            <div class="u-flex-wrap">
-                <a data-test="c-header__logo-link" data-component="back-submissions" href="{{backUrl}}" class="u-flex-wrap header-logo-link" title="Back to manuscript list">
-                    <img alt="Springer Nature" width="209" src="/images/header_logo_SN.svg" class="{{#if showJournalLogo}}with-journal-logo {{/if}}c-header__site-logo">
-                    {{#if showJournalLogo}}
-                        <span class="hide c-header__journal-title" data-component-journal-title>{{submission.journalName}}</span>
-                        {{#if submission.journalId}}
-                            <img alt="" height="45" src="//ca-branding.live.public.springernature.io/journals/{{submission.journalId}}/logo.svg" class="c-header__journal-logo" 
-                            data-component-journal-logo onerror="this.classList.add('hide');document.querySelector('[data-component-journal-title]').classList.remove('hide');">
-                        {{/if}}
+            <a data-component="back-submissions" href="{{backUrl}}" class="c-header__logo-link" title="Back to manuscript list">
+                <img alt="Springer Nature" width="209" src="/images/header_logo_SN.svg" class="c-header__site-logo{{#if showJournalLogo}} with-journal-logo{{/if}}">
+                {{#if showJournalLogo}}
+                    <span class="c-header__journal-title hide" data-component-journal-title>{{submission.journalName}}</span>
+                    {{#if submission.journalId}}
+                        <img alt="{{submission.journalName}}" height="45" src="//ca-branding.live.public.springernature.io/journals/{{submission.journalId}}/logo.svg" class="c-header__journal-logo" 
+                        data-component-journal-logo onerror="this.classList.add('hide');document.querySelector('[data-component-journal-title]').classList.remove('hide');">
                     {{/if}}
-                </a>
-            </div>
+                {{/if}}
+            </a>
 
             {{!-- If you are using the user-details component, insert here --}}
-
+            
         </div>
     </div>
 </header>
