add nature brand to component

--- a/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-meta/scss/10-settings/_default.scss
@@ -12,3 +12,4 @@ $meta--border: 1px solid #eee;
 $meta--color: #222;
 $meta--margin-bottom: 10px;
 $meta--font-weight: 700;
+$meta--text-transform: uppercase;
