--- a/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
@@ -7,7 +7,7 @@
 }
 
 .c-corporate-footer__legal {
-	@include font-size($corporate-footer--font-size);
+	font-size: $corporate-footer--font-size;
 	color: $corporate-footer--text-color;
 	margin-bottom: $corporate-footer--margin-bottom;
 	padding-top: $corporate-footer--legal-padding-top;
