Remove use of rfs font-size mixin in global-status-message

--- a/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
+++ b/toolkits/global/packages/global-status-message/scss/50-components/status-message.scss
@@ -1,5 +1,5 @@
 .c-status-message {
-	@include font-size($status-message--font-size);
+	font-size: $status-message--font-size;
 	position: relative;
 	font-family: $status-message--font-family;
 	display: flex;
@@ -20,7 +20,7 @@
 }
 
 .c-status-message__heading {
-	@include font-size($status-message--font-size);
+	font-size: $status-message--font-size;
 	font-family: $status-message--font-family;
 	font-weight: $status-message--font-weight;
 }
