--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -3,14 +3,14 @@
 		height: 30px;
 
 		&__open {
-			@include arrow($darker-grey, down, 4px);
+			@include arrow($link-color, down, 4px);
 
 			margin-left: 10px;
 			right: 0;
 			color: $link-color;
 
 			&.open {
-				@include arrow($darker-grey, up, 4px);
+				@include arrow($link-color, up, 4px);
 			}
 		}
 
