--- a/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-breadcrumbs/scss/10-settings/default.scss
@@ -2,5 +2,4 @@ $breadcrumbs-font-family: $font-family-sans;
 $breadcrumbs-font-size: 16px;
 $breadcrumbs-color: black;
 $breadcrumbs-link-color: greyscale(40);
-$breadcrumbs-bottom-spacing: spacing(16);
-$breadcrumbs-chevron-spacing: spacing(4);
+$breadcrumbs-chevron-spacing: spacing(4) spacing(4) 0;
