--- a/context/brand-context/springer/scss/30-mixins/typography.scss
+++ b/context/brand-context/springer/scss/30-mixins/typography.scss
@@ -25,3 +25,48 @@
 @mixin u-text-weight($weight) {
 	font-weight: $weight;
 }
+
+// Headings
+
+@mixin heading-base {
+	font-style: normal;
+	margin-bottom: 1em;
+	line-height: $line-height-tight;
+
+	a {
+		@include interface-link;
+	}
+}
+
+@mixin u-h1 {
+	@include heading-base;
+	font-size: $font-size-h1;
+	font-size: unquote('min(max(#{$font-size-h1-min}, 4vw), #{$font-size-h1})');
+	font-family: $font-family-serif;
+	font-weight: $font-weight-normal;
+}
+
+@mixin u-h2 {
+	@include heading-base;
+	font-size: $font-size-h2;
+	font-size: unquote('min(max(#{$font-size-h2-min}, 3.5vw), #{$font-size-h2})');
+	font-family: $font-family-serif;
+	font-weight: $font-weight-normal;
+}
+
+@mixin u-h3 {
+	@include heading-base;
+	font-size: $font-size-h3;
+	font-size: unquote('min(max(#{$font-size-h3-min}, 3vw), #{$font-size-h3})');
+	font-family: $font-family-serif;
+	font-weight: $font-weight-normal;
+}
+
+@mixin u-h4 {
+	@include heading-base;
+	font-size: $font-size-h4;
+	font-size: unquote('min(max(#{$font-size-h4-min}, 2.5vw), #{$font-size-h4})');
+	font-family: $font-family-sans;
+	font-weight: $font-weight-bold;
+}
+
