Adds u-h* to springer utils

--- a/context/brand-context/springer/scss/60-utilities/typography.scss
+++ b/context/brand-context/springer/scss/60-utilities/typography.scss
@@ -42,3 +42,23 @@
 	@include word-wrap;
 }
 
+/**
+ * Classes used to maintain the semantically appropriate heading levels
+ */
+
+.u-h1 {
+	@include u-h1();
+}
+
+.u-h2 {
+	@include u-h2();
+}
+
+.u-h3 {
+	@include u-h3();
+}
+
+.u-h4 {
+	@include u-h4();
+}
+
