--- a/context/brand-context/springer/scss/40-base/basic.scss
+++ b/context/brand-context/springer/scss/40-base/basic.scss
@@ -22,26 +22,22 @@ button {
 	cursor: pointer;
 }
 
-h1,
-.h1 {
+h1 {
 	font-size: 30px;
 	font-size: 3rem;
 }
 
-h2,
-.h2 {
+h2 {
 	font-size: 24px;
 	font-size: 2.4rem;
 }
 
-h3,
-.h3 {
+h3 {
 	font-size: 17px;
 	font-size: 1.7rem;
 }
 
-h4,
-.h4 {
+h4 {
 	font-size: 14px;
 	font-size: 1.4rem;
 }
