--- a/context/brand-context/springer/scss/40-base/typography.scss
+++ b/context/brand-context/springer/scss/40-base/typography.scss
@@ -1,32 +1,24 @@
 h1,
-.h1,
 h2,
-.h2,
 h3,
-.h3,
-h4,
-.h4 {
+h4{
 	line-height: 1.4;
 	margin-top: 0;
 }
 
-h1,
-.h1 {
+h1 {
 	@include u-h1;
 }
 
-h2,
-.h2 {
+h2 {
 	@include u-h2;
 }
 
-h3,
-.h3 {
+h3 {
 	@include u-h3;
 }
 
 h4,
-.h4,
 h5,
 h6 {
 	@include u-h4;
