fix border colour and default view options

--- a/toolkits/springernature/packages/springernature-header/view/header.hbs
+++ b/toolkits/springernature/packages/springernature-header/view/header.hbs
@@ -1,7 +1,7 @@
 <header class="c-header">
     <div class="c-header__inner">
         <div class="c-header__content">
-            <a data-component="back-submissions" href="{{backUrl}}" class="c-header__logo-link" title="Back to manuscript list">
+            <a data-component="home-link" href="{{backUrl}}" class="c-header__logo-link" title="Back to home page">
                 <img alt="Springer Nature" width="209" src="/images/header_logo_SN.svg" class="c-header__site-logo{{#if showJournalLogo}} with-journal-logo{{/if}}">
                 {{#if showJournalLogo}}
                     <span class="c-header__journal-title hide" data-component-journal-title>{{submission.journalName}}</span>
