Use global colors

--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/core.scss
@@ -24,7 +24,7 @@
 		list-style-type: none;
 		margin: 0;
 		padding: 5px 0 0 0;
-		border-top: 1px solid #e7eff4;
+		border-top: 1px solid $separator-color;
 		color: #666;
 	}
 
