Adds light-blue color

--- a/context/brand-context/nature/scss/10-settings/colors/default.scss
+++ b/context/brand-context/nature/scss/10-settings/colors/default.scss
@@ -21,6 +21,7 @@ $foreground-light: #eee;
 // default colors
 $colors: (
 	'blue': #069,
+	'light-blue': #ebf6ff,
 	'steel': #bcd2dc,
 	'grape': #bee188,
 	'lemon': #fece3e,
