Uses new light blue color for global-pill background

--- a/toolkits/global/packages/global-pill/scss/10-settings/nature.scss
+++ b/toolkits/global/packages/global-pill/scss/10-settings/nature.scss
@@ -1,2 +1,2 @@
-$pill--background-color: color('soft-steel');
-$pill--color: color('blue');
+$pill--background-color: color('light-blue');
+$pill--color: color('action-base');
