[JaeRae/AW] handle displaying leaderboard conditionally based on institutional banner

--- a/toolkits/global/packages/global-ad/scss/50-components/ad.scss
+++ b/toolkits/global/packages/global-ad/scss/50-components/ad.scss
@@ -25,6 +25,17 @@
 	}
 }
 
+.js .c-ad--728x90 {
+	@include media-query('md') {
+		display: none;
+	}
+}
+.js .u-show-following-ad .c-ad--728x90 {
+	@include media-query('md') {
+		display: block;
+	}
+}
+
 .c-ad--160x600 {
 	// Skyscraper
 	padding: 0;
