Adds font-family var to article

--- a/toolkits/global/packages/global-article/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-article/scss/10-settings/default.scss
@@ -33,6 +33,8 @@ $article--cta-button-icon-hover-color: white;
 $article--cta-button-border-color: blue;
 $article--cta-button-border-radius: 0;
 
+$article--font-family: $font-family-serif;
+
 $article--font-sizes: (
 	'font-size-1': 13px,
 	'font-size-2': 14px,
