Fixed missing sibling selector

--- a/toolkits/global/packages/global-ad/scss/50-components/ad.scss
+++ b/toolkits/global/packages/global-ad/scss/50-components/ad.scss
@@ -31,7 +31,7 @@
 	}
 }
 
-.js .u-show-following-ad .c-ad--728x90 {
+.js .u-show-following-ad + .c-ad--728x90 {
 	@include media-query('md') {
 		display: block;
 	}
