--- a/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
+++ b/toolkits/springernature/packages/springernature-user-details/scss/50-components/enhanced.scss
@@ -3,14 +3,14 @@
 		height: 30px;
 
 		&__open {
-			@include arrow(map-get-($colors, blue), down, 4px);
+			@include arrow(map-get($colors, blue), down, 4px);
 
 			margin-left: 10px;
 			right: 0;
-			color: map-get-($colors, blue);
+			color: map-get($colors, blue);
 
 			&.open {
-				@include arrow(map-get-($colors, blue), up, 4px);
+				@include arrow(map-get($colors, blue), up, 4px);
 			}
 		}
 
