--- a/toolkits/springernature/packages/springernature-user-details/view/user-details.hbs
+++ b/toolkits/springernature/packages/springernature-user-details/view/user-details.hbs
@@ -7,8 +7,8 @@
         <span class="c-user-details__content-item">Signed in as</span>
         <div class="c-user-details__content-item c-user-details__email" data-component-user-email>{{email_address}}</div>
         <ul class="c-user-details__links">
-            <li class="c-user-details__link">
-                <a class="c-user__logout" href="{{logoutUri}}" data-component-logout>Log out</a>
+            <li>
+                <a class="c-user-details__link c-user-details__logout" href="{{logoutUri}}" data-component-logout>Log out</a>
             </li>
         </ul>
     </div>
