--- a/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
@@ -96,7 +96,7 @@
 	.c-header-expander__keyline:not(:only-child),
 	.c-header-expander__keyline:not(:last-child) {
 		margin-bottom: spacing(16);
-		padding-top: 0
+		padding-top: 0;
 	}
 }
 
