--- a/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
@@ -111,6 +111,11 @@
 			padding-bottom: spacing(0);
 		}
 	}
+
+	.c-header-expander__item--keyline-first-item-only ~ .c-header-expander__item--keyline-first-item-only {
+		border-top: none;
+		padding-top: 0;
+	}
 }
 
 .c-header-expander--tray.has-tethered {
