Adds modifier for keyline on first list item only (#414)
* Adds modifier for header expander item keyline for first occurence of element in list only

* Readme updated

--- a/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
+++ b/toolkits/nature/packages/nature-header/scss/50-components/header-expander.scss
@@ -91,6 +91,11 @@
 		padding-top: spacing(16);
 		margin-top: spacing(8);
 	}
+
+	.c-header-expander__item--keyline-first-item-only ~ .c-header-expander__item--keyline-first-item-only {
+		border-top: none;
+		padding-top: 0;
+	}
 }
 
 .c-header-expander--tray.has-tethered {
