Adds important to hide utilities to stop selector specificity trumping them accidentally

--- a/context/brand-context/default/scss/30-mixins/hiding.scss
+++ b/context/brand-context/default/scss/30-mixins/hiding.scss
@@ -1,6 +1,6 @@
 @mixin u-hide {
-	display: none;
-	visibility: hidden;
+	display: none !important;
+	visibility: hidden !important;
 }
 
 @mixin u-show {
